Spacing and positions of the time line fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -74,8 +74,9 @@ table {
 }
 
 .AP{
-  position: absolute;
-}
+  position:;
+  float:left;
+  }
 
 /* Background */
 
